--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Ensure gomobile is installed.
       run: go install golang.org/x/mobile/cmd/gomobile@latest
     - name: Build
-      run: build-android
+      run: make build-android
