--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,6 +24,6 @@ jobs:
         go-version: '1.17'
         check-latest: true
     - name: Ensure gomobile is installed.
-      run: go install golang.org/x/mobile/cmd/gomobile@latest
+      run: go install golang.org/x/mobile/cmd/gomobile@latest && gomobile init
     - name: Build
       run: make build-android
