--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,6 +19,8 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v2
     - uses: actions/setup-go@v4
       with:
         go-version: '1.17'
