--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,14 +16,14 @@ jobs:
     - name: set up JDK 11
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
-        distribution: 'temurin'
+        java-version: 11
+        distribution: temurin
         cache: gradle
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
     - uses: actions/setup-go@v4
       with:
-        go-version: '1.17'
+        go-version: 1.17
         check-latest: true
     - name: Ensure gomobile is installed.
       run: go install golang.org/x/mobile/cmd/gomobile@latest && gomobile init
