chore: Store artifacts from build stages.
Signed-off-by: Vincent Palmer <vincent@getcure.app>

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,3 +29,7 @@ jobs:
       run: go install golang.org/x/mobile/cmd/gomobile@latest && gomobile init
     - name: Build
       run: make build-android
+    - uses: actions/upload-artifact@v3
+      with:
+        name: android
+        path: build/android
